--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule ".vim/bundle/neocomplcache"]
 	path = .vim/bundle/neocomplcache
 	url = https://github.com/vim-scripts/neocomplcache.git
+[submodule ".vim/bundle/perlomni.vim"]
+	path = .vim/bundle/perlomni.vim
+	url = https://github.com/c9s/perlomni.vim.git
